@@ -37,6 +37,7 @@ lib/Gscan2pdf/Dialog/Scan.pm
 lib/Gscan2pdf/Dialog/Scan/CLI.pm
 lib/Gscan2pdf/Dialog/Scan/Sane.pm
 lib/Gscan2pdf/Document.pm
+lib/Gscan2pdf/EntryCompletion.pm
 lib/Gscan2pdf/Frontend/CLI.pm
 lib/Gscan2pdf/Frontend/Sane.pm
 lib/Gscan2pdf/NetPBM.pm
@@ -168,6 +169,7 @@ t/07_Dialog_Renumber.t
 t/081_Frontend_CLI.t
 t/0821_Frontend_Sane.t
 t/0822_Frontend_Sane.t
+t/09_EntryCompletion.t
 t/1.gs2p
 t/10_Document.t
 t/1111_save_pdf.t
