@@ -2,6 +2,7 @@
 
 * Use simplified tesseract call for tesseract >= 3.02.02. Closes patch #15
   (Simplifying Tesseract call in Tesseract.pm). Thanks to Wikinaut for the patch
+* Add completion for author, title, subject & keyword metadata
 
 
 1.3.5 (07.10.2015):
